assign icon to windows desktop .ini

--- a/bg1npc/desktop.ini
+++ b/bg1npc/desktop.ini
@@ -4,4 +4,4 @@ NoSharing=0
 IconFile=style\g3.ico
 IconIndex=0
 InfoTip=www.gibberlings3.net modification for the i.e. games conversions Tutu or BGT
-IconResource=C:\Users\Stephen\Desktop\bg1npc_anniversary\bg1npc\style\g3.ico,0
+IconResource=E:\ARANBETA1\aranw_aware\docs\style\g3.ico,0
