--- a/bg1npc/bg1npc.ini
+++ b/bg1npc/bg1npc.ini
@@ -26,10 +26,8 @@ Forum = https://www.gibberlings3.net/forums/forum/45-bg1-npc-project/
 # If you use other hosting sites, please check requirements and put direct download link  
 Download = https://github.com/Gibberlings3/BG1NPC
 
-# Requirements for other hosting sites:
-# - forum attachments won't work because the download links will be changed every time when you update mod package
-# - mod package should be downloaded using 'wget' commandline tool: wget.exe --no-check-certificate 'link'
-# - it's possible to preform file size check using 'wget' commandline tool: wget.exe --no-check-certificate --spider 'link'
-# - links do not expire after 30 or more days without download ( speeedyshare, mediafire etc has forced expiration dates)
-# - hosting site won't require user interaction or captcha ( googledrive, mediafire etc require user interaction)
-# - hosting site don't advertise any kind of adware/crapware etc
+Type = NPC
+
+After = bg2fixpack, bgqe, c#brage, Tweak_early
+
+Before = atweaks, cdtweaks, EET_end 
