--- a/bg1npc/bg1npc.ini
+++ b/bg1npc/bg1npc.ini
@@ -28,6 +28,6 @@ Download = https://github.com/Gibberlings3/BG1NPC
 
 Type = NPC
 
-After = bg2fixpack, bgqe, c#brage, Tweak_early
+After = bg2fixpack, bgqe, c#brage, Framed, Tweak_early
 
 Before = atweaks, cdtweaks, EET_end 
