globally unique LABELs

--- a/bg1npc/bg1npc.ini
+++ b/bg1npc/bg1npc.ini
@@ -26,6 +26,9 @@ Forum = https://www.gibberlings3.net/forums/forum/45-bg1-npc-project/
 # If you use other hosting sites, please check requirements and put direct download link  
 Download = https://github.com/Gibberlings3/BG1NPC
 
+# Type of LABELs used by the mod, read more here https://www.gibberlings3.net/forums/topic/32516-tutorial-what-is-label
+LabelType = GloballyUnique
+
 Type = NPC
 
 After = bg2fixpack, bgqe, c#brage, Tweak_early
