--- a/bg1npc/bg1npc.ini
+++ b/bg1npc/bg1npc.ini
@@ -33,4 +33,4 @@ Type = NPC
 
 After = bg2fixpack, bgqe, c#brage, Tweak_early
 
-Before = atweaks, cdtweaks, EET_end, Framed
+Before = atweaks, cdtweaks, c#brandock, c#greythedog, EET_end, Framed
